--- a/app/src/main/res/layout/buscar_fragment.xml
+++ b/app/src/main/res/layout/buscar_fragment.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/fundoCinza">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="320px"
-        android:background="@drawable/fundo_home_header"
-        >
-
+        android:layout_height="100dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo_dad"
-            android:layout_centerInParent="true"
-            />
-
+            android:src="@drawable/logo_dad"/>
     </RelativeLayout>
-    <TextView
+    <EditText
         android:layout_width="match_parent"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="20dp"
-        android:textAlignment="center"/>
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:hint="Procurar Avaliação de Professor"
+        android:drawableLeft="@drawable/ic_search_roxo"/>
+
 
 </LinearLayout>
