--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,7 +3,8 @@
     <item
         android:id="@+id/homeItem"
         android:title="Início"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_home"
+        />
     <item
         android:id="@+id/avalItem"
         android:title="Avaliações"
