--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#925af2</color>
+    <color name="colorPrimaryDark">#3f0071</color>
+    <color name="colorAccent">#8b06f7</color>
+    <color name="fundoCinza">#e7e6e6</color>
+    <color name="fundoCinzaClaro">#f5f5f5</color>
+    <color name="fundoVermelhorLogo">#b70b0b</color>
 </resources>
