--- a/app/src/main/res/layout-v21/list_results_searchs.xml
+++ b/app/src/main/res/layout-v21/list_results_searchs.xml
@@ -17,10 +17,10 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="62dp"
-            android:layout_weight="0.7"
-            android:src="@drawable/teacher2"
             android:layout_marginLeft="5dp"
-            android:alpha="0.9"/>
+            android:layout_weight="0.7"
+            android:alpha="0.9"
+            android:src="@drawable/teacher2" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -34,30 +34,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nome Professor"
-                android:textSize="22dp"
                 android:textColor="@android:color/black"
-                />
+                android:textSize="22dp" />
 
             <TextView
                 android:id="@+id/tvResultadoSetor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Setor IMD"
-                android:textSize="18dp"
-                />
+                android:textSize="18dp" />
 
 
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.7">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="?android:fromId"
-                android:src="@drawable/ic_action_gear"
-                android:layout_centerInParent="true"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/seta_more"
+                android:alpha="0.7"/>
 
         </RelativeLayout>
 
@@ -71,5 +71,5 @@
             android:layout_marginLeft="15dp"
             android:alpha="0.4"
             />
-
+    
 </LinearLayout>
