--- a/app/src/main/res/layout/buscar_fragment.xml
+++ b/app/src/main/res/layout/buscar_fragment.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/fundoCinza">
+    <!--<ProgressBar-->
+        <!--style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="3dp"-->
+        <!--android:id="@+id/progressBar"-->
+        <!--android:layout_below="@+id/edittext_url"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:progressDrawable="@drawable/top_progress_bar" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,37 +24,65 @@
             android:src="@drawable/logo_dad"/>
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/edtBuscar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:drawableLeft="@drawable/ic_search_roxo"
-        android:hint="Procurar Avaliação de Professor"
-        android:singleLine="true"
-        android:textAlignment="center" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
+
+        <EditText
+            android:id="@+id/edtBuscar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="3dp"
+            android:drawableLeft="@drawable/ic_search_roxo"
+            android:hint="Digite nome do professor"
+            android:singleLine="true"
+            android:textAlignment="center" />
 
         <Button
             android:id="@+id/bttBuscar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginRight="5dp"
             android:text="Buscar"
             android:textAllCaps="false"
             android:layout_centerInParent="true"
             />
-    </RelativeLayout>
+    </LinearLayout>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_results"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
+        <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Informação"
+            android:textAlignment="center"
+            android:layout_centerInParent="true"/>
+
+        <!--Lista com resultados-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_results"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+
+
+    </RelativeLayout>
 
 
 </LinearLayout>
