--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -1,40 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:id="@+id/tvDetalhesNome"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
+        app:elevation="10dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerInParent="true"
+                >
+
+                <TextView
+                    android:id="@+id/tvDetalhesNome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:text="Nome:"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/tvDetalhesFormacao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:text="Formação"
+                    android:alpha="0.6"
+                    android:textAlignment="center"/>
+
+
+                <!--android:shadowRadius="@android:integer/config_longAnimTime"/>-->
+
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="Nome:"
-        android:paddingLeft="10dp"
-        android:textAlignment="textStart"/>
-    <TextView
-        android:id="@+id/tvDetalhesFormacao"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
+            app:elevation="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/fundoCinzaClaro"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="18px"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/colorPrimary" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="formacao:"
+                        android:paddingLeft="10dp"
+                        android:textColor="@android:color/black"
+                        android:textAlignment="textStart"/>
+
+
+                    <!--android:shadowRadius="@android:integer/config_longAnimTime"/>-->
+
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
+            app:elevation="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/fundoCinzaClaro"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="18px"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/colorPrimary" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp">
+
+                    <TextView
+                        android:id="@+id/tvDetalhesSetor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Setor:"
+                        android:paddingLeft="10dp"
+                        android:textColor="@android:color/black"
+                        android:textAlignment="textStart"/>
+
+                    <!--android:shadowRadius="@android:integer/config_longAnimTime"/>-->
+
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+    <!--Spinners-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Componente:"/>
+
+        <android.support.v7.widget.AppCompatSpinner
+            android:id="@+id/spinnerComp"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1.5"
+            android:textAlignment="center"
+            android:theme="@style/mySpinner" />
+
+
+    </LinearLayout>
+
+    <!--Gráficos e Pizzas-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="formacao:"
-        android:paddingLeft="10dp"
-        android:textAlignment="textStart"/>
-    <TextView
-        android:id="@+id/tvDetalhesSetor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Setor:"
-        android:paddingLeft="10dp"
-        android:textAlignment="textStart"/>
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:text="Média dos Aprovados"
+            android:textSize="18dp"
+            android:textColor="@android:color/black"
+            android:textAlignment="textStart"
+            android:paddingLeft="10dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:textAlignment="textEnd"
+            android:paddingRight="10dp"
+            android:text="info"/>
+    </LinearLayout>
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="match_parent">
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.github.mikephil.charting.charts.PieChart>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp">
+
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/chart1">
+                    </com.github.mikephil.charting.charts.BarChart>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+    </ScrollView>
 
 </LinearLayout>
